--- a/UI/css/sign-up.css
+++ b/UI/css/sign-up.css
@@ -13,6 +13,10 @@ body{
     font-size: 1.2em;
     line-height: 1.5;
     text-align: center;
+    margin: auto;
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 /* header */
@@ -102,11 +106,13 @@ header{
 
 /* Section area */
 section{
+    height: 100%;
     background: url(../assets/join.jpg);
     background-position: center;
     background-size: cover;
 }
 .background{
+    height: 100%;
     padding: .7rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -114,6 +120,7 @@ section{
 }
 .section1{
     color: white;
+    margin: auto;
 }
 .section1 h1{
     max-width: 400px;
@@ -124,7 +131,7 @@ section{
     max-width: 380px;
     border-radius: 6px;
     padding: .7em;
-    margin-bottom: 200px;
+    margin-bottom: 20px;
 
 }
 .section2 .small-logo{
@@ -279,22 +286,18 @@ footer{
         padding: 50px;
     }
     .section2{
-        margin-top: 50px;
+        max-height: 550px;
+        margin-top: 50px; 
+        margin: auto;       
     }
 }
 
 
 @media only screen and (min-width: 1440px){
     body{
-         max-width: 1440px;
-         margin: auto;
-         min-height: 100%;
-         display: grid;
-         grid-template-rows: auto 1fr auto;
-         
-     }  
-     .background{
-        padding-bottom: 55vh;
-    } 
-
+         max-width: 1440px;        
+     }   
+    .section2{
+    max-height: 600px;
+}
  }
